--- a/src/Login/style.css
+++ b/src/Login/style.css
@@ -1,13 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap');
+@import url('https://fonts.cdnfonts.com/css/nike');
 .login {
   text-align: center;
   width: 100%;
   height: 100vh;
   color: white;
   font-family: 'Dosis', sans-serif;
-  background-image: url('../../public/assets/bannerlogin.png');
   background-position: center;
+  background-image: url(../../public/assets/fundologin.png);
 }
 
 .login-box{
@@ -18,14 +19,16 @@
 }
 
 .menu-login {
-  background-color: rgba(58, 57, 57, 0.932);
-  box-shadow: 0px 0px 100px 1px rgba(7, 7, 7, 0.863);
+  background-color: rgb(58, 57, 57);
+  box-shadow: 0px 0px 100px 1px rgba(7, 7, 7, 0.753);
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 500px;
-  height: 400px;
+  width: 410px;
+  height: 350px;
+  padding-top: 20px;
+  border-radius: 0 0 70px 70px;
 }
 
 .campos {
@@ -54,25 +57,23 @@ input::placeholder{
 
 .titulo {
   font-size: 50px;
-  font-weight: 600;
+  font-weight: 100;
   margin-bottom: 0;
   padding-top: 20px;
+  letter-spacing: 5px;
+  font-family: 'Nike', sans-serif;
 }
- p {
-  margin-top: 0;
-  font-size: 18px;
- }
 
  .log{
   margin-top: 30px;
-  padding: 10px 20px;
-  width: 200px;
+  padding: 25px 20px;
+  border-radius: 0 0 1800px 1800px;
+  width: 370px;
   border: none;
   font-weight: 600;
   background-color: #f0f0f0;
   color: #000;
   cursor: pointer;
-  margin-bottom: 50px;
  }
 
  .log:hover{
@@ -88,6 +89,10 @@ input::placeholder{
 
   .menu-login{
     width: 300px;
+  }
+
+  .log {
+    width: 260px
   }
 
   p {
