--- a/src/Principal/style.css
+++ b/src/Principal/style.css
@@ -13,6 +13,8 @@
    justify-content: space-around;
    font-family: 'Barlow Condensed', sans-serif;
    font-weight: 600;
+   background-color: rgba(12, 12, 12, 0.952);
+   padding: 20px
 }
 
 .menu {
@@ -26,17 +28,22 @@
 }
 
 .link {
-    color: #000000;
+    color: #fff;
+}
+
+.link:hover{
+    border-bottom: 1px solid rgb(255, 255, 255);
 }
 
 .logo {
-    width: 80px;
+    width: 100px;
 }
 
 .banner {
     background-image: url('../../public/assets/bannerlogin.png');
     background-position: center;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     font-size: 50px;
@@ -44,42 +51,44 @@
     letter-spacing: 5px;
     text-shadow: 0 0 10px #000;
     height: 500px;
-    border-top: 10px solid rgb(58, 57, 57);
+    border-top: 5px solid rgb(151, 151, 151);
     border-bottom: 10px solid rgb(58, 57, 57);
     font-family: 'Nike', sans-serif;
 }
 
+.banner h2{
+    font-size: 35px;
+}
+
 .produtos {
-    padding: 100px;
     display: flex;
     align-items: center;
     justify-content: space-around;
     flex-wrap: wrap;
-    gap: 50px;
+    height:800px;
+    background-image: url('../../public/assets/fundocard.jpg');
 }
 
 .card {
-    width: 500px;
-    height: 400px;
-    background-color: rgb(240, 240, 240);
+    width: 100%;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     transition: 0.5s;
+    background-color: rgba(107, 106, 106, 0.336);
 }
 
-.card:hover{
-    box-shadow: 0 0 10px rgb(207, 207, 207);
-}
 
 .card img{
-    width: 300px;
+    width: 800px;
     object-fit: contain;
     transition: 0.5s;
+    box-shadow: 0px 0px 00px black;
 }
 
 .card img:hover{
-    transform: scale(1.2)
+    transform: scale(1.05)
 }
 
 footer{
@@ -93,19 +102,13 @@ footer img{
 }
 
 @media (max-width: 768px) {
-    .produtos{
-        flex-direction: column;
-        padding: 0;
-    }
 
     .card {
-        width: 300px;
         align-items: center;
         justify-content: center;
-        background-color: transparent;
     }
     .card img{
-        width: 200px
+        width: 400px
     }
 
     .banner {
